--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -7,52 +7,82 @@
     tools:context=".ExerciseActivity">
 
     <Button
-        android:id="@+id/StartTimerBtn"
+        android:id="@+id/startTimerBtn"
         android:layout_width="225dp"
         android:layout_height="152dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
+        android:layout_marginStart="93dp"
+        android:layout_marginLeft="93dp"
         android:layout_marginTop="40dp"
-        android:onClick="testShow"
+        android:layout_marginEnd="93dp"
+        android:layout_marginRight="93dp"
+        android:onClick="startTimer"
         android:text="START TIMER"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/numberOfPushpsTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginLeft="76dp"
-        android:layout_marginTop="160dp"
-        android:editable="false"
-        android:ems="10"
-        android:text="How many did you do?"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/StartTimerBtn" />
-
-    <EditText
-        android:id="@+id/NumberOfPushpsTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="99dp"
+        android:layout_marginLeft="99dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="99dp"
+        android:layout_marginRight="99dp"
         android:ems="10"
         android:hint="Number of pushups"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/infoTxt" />
 
     <Button
         android:id="@+id/ConfirmBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="168dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="121dp"
+        android:layout_marginLeft="121dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="122dp"
+        android:layout_marginRight="122dp"
         android:onClick="saveToDb"
         android:text="CONFIRM"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/NumberOfPushpsTxt" />
+        app:layout_constraintTop_toBottomOf="@+id/numberOfPushpsTxt" />
+
+    <TextView
+        android:id="@+id/timerTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="170dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="170dp"
+        android:layout_marginRight="170dp"
+        android:text="1:00"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startTimerBtn" />
+
+    <TextView
+        android:id="@+id/infoTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginRight="54dp"
+        android:layout_marginBottom="36dp"
+        android:text="How many did you do?"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/numberOfPushpsTxt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timerTxt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
