updated layout files

--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="93dp"
         android:layout_marginRight="93dp"
         android:onClick="startTimer"
-        android:text="START TIMER"
+        android:text="@string/start_timer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,14 +32,15 @@
         android:layout_marginEnd="99dp"
         android:layout_marginRight="99dp"
         android:ems="10"
-        android:hint="Number of pushups"
-        android:inputType="textPersonName"
+        android:hint="@string/number_of_pushups"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoTxt" />
+        app:layout_constraintTop_toBottomOf="@+id/infoTxt"
+        android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/ConfirmBtn"
+        android:id="@+id/confirmBtn"
         android:layout_width="168dp"
         android:layout_height="96dp"
         android:layout_marginStart="121dp"
@@ -48,7 +49,7 @@
         android:layout_marginEnd="122dp"
         android:layout_marginRight="122dp"
         android:onClick="saveToDb"
-        android:text="CONFIRM"
+        android:text="@string/confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberOfPushpsTxt" />
@@ -62,7 +63,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="170dp"
         android:layout_marginRight="170dp"
-        android:text="1:00"
+        android:text="@string/_1_00"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
         android:layout_marginEnd="54dp"
         android:layout_marginRight="54dp"
         android:layout_marginBottom="36dp"
-        android:text="How many did you do?"
+        android:text="@string/how_many_did_you_do"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/numberOfPushpsTxt"
         app:layout_constraintEnd_toEndOf="parent"
