--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="170dp"
         android:layout_marginRight="170dp"
-        android:text="@string/_1_00"
+        android:text="@string/_60"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
