--- a/app/src/main/res/layout/history_plot.xml
+++ b/app/src/main/res/layout/history_plot.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         ap:domainTitle="Date"
-        ap:graphHeight="300dp"
+        ap:lineLabelInsetLeft="-100dp"
+        ap:graphHeight="250dp"
         ap:lineLabelRotationBottom="-45"
         ap:lineLabels="left|bottom"
         ap:rangeTitle="# of pushups"
